[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/protatape/StearingAiVersion/Draw.gd" type="Script" id=1]
[ext_resource path="res://assets/atlas/game_src.png" type="Texture" id=2]
[ext_resource path="res://scene/protatape/StearingAiVersion/stick.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 605, 55, 96, 96 )

[sub_resource type="CircleShape2D" id=2]
radius = 47.0

[node name="Draw" type="Node2D"]
script = ExtResource( 1 )

[node name="stick" type="Area2D" parent="."]
visible = false
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="stick"]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="stick"]
shape = SubResource( 2 )

[connection signal="area_entered" from="stick" to="stick" method="_on_stick_area_entered"]
[connection signal="area_exited" from="stick" to="stick" method="_on_stick_area_exited"]
[connection signal="stick_to_area" from="stick" to="." method="_on_stick_stick_to_area"]
